--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
+    "@adiwajshing/baileys": "^latest",
     "@hapi/boom": "^10.0.1",
     "api-dylux": "^1.7.2",
     "awesome-phonenumber": "^2.64.0",
